--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,23 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+.rainbow {
+  background-color: #f39f86;
+  background-image: linear-gradient(315deg, #f39f86 0%, #f9d976 74%);
+}
+
+.list-md {
+  .item-block {
+    .item-inner {
+      border-bottom: 0;
+    }
+  }
+}
+ion-item-options {
+  .button:last-child {
+    padding: 0;
+  }
+}
+
