--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
-
+  .sliding {
+    background-color: #fff;
+    border-radius: 4px;
+    margin-bottom: 5px;
+    border-left: 4px solid #EF6DA0;
+  }
+  .scroll-content {
+    background-color: #d9e4f5;
+    background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+  }
 }
