--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #F39F86,
+  secondary:  #F9D976,
+  danger:     #FF8489,
+  light:      #FEC8D8,
+  dark:       #3EADCF,
 );
 
 
