validation & css tweaks

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,7 @@ page-home {
     background-color: #fff;
     border-radius: 4px;
     margin-bottom: 5px;
-    border-left: 4px solid #EF6DA0;
+    border-left: 4px solid #F39F86;
   }
   .scroll-content {
     background-color: #d9e4f5;
