--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,4 +9,20 @@ page-home {
     background-color: #d9e4f5;
     background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
   }
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px 2px 2px 0;
+
+    .tag {
+      flex: initial;
+      margin: 0 2px 4px;
+      background-color: #f39f86;
+      background-image: linear-gradient(315deg, #f39f86 0%, #f9d976 74%);
+      font-size: 11px;
+      padding: 3px 6px;
+      border-radius: 10px;
+    }
+  }
 }
