--- a/src/components/note-item/note-item.html
+++ b/src/components/note-item/note-item.html
@@ -1,4 +1,4 @@
-<ion-item-sliding class="sliding" (click)="viewTheNote(note)">
+<ion-item-sliding class="sliding" (click)="viewNotes(note)">
   <ion-item>
     <h2>{{ note.title }}</h2>
     <div class="tags">
@@ -7,10 +7,10 @@
 
   </ion-item>
   <ion-item-options side="right">
-    <button ion-button icon-only color="dark" (click)="openTheModal(note)">
+    <button ion-button icon-only color="dark" (click)="openModals(note)">
       <ion-icon name="create"></ion-icon>
     </button>
-    <button ion-button icon-only color="danger" (click)="deleteTheNote(note)">
+    <button ion-button icon-only color="danger" (click)="deleteNotes(note)">
       <ion-icon name="trash"></ion-icon>
     </button>
   </ion-item-options>
