finished tag filter functionality and code refactor

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,5 +24,10 @@ page-home {
       padding: 3px 6px;
       border-radius: 10px;
     }
+
+    .clear-tags {
+      background-color: #FF8489;
+      background-image: none;
+    }
   }
 }
