--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,20 +1,3 @@
-// http://ionicframework.com/docs/theming/
-
-
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
-
 
 .rainbow {
   background-color: #f39f86;
@@ -28,9 +11,38 @@
     }
   }
 }
+
 ion-item-options {
   .button:last-child {
     padding: 0;
   }
 }
 
+.input {
+  border: 2px solid #000;
+  border-radius: 4px;
+  margin-bottom: 5px;
+  background-color: #d9e4f5;
+  background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+  color: #000;
+}
+
+.scroll-content {
+  background-color: #ffd9de;
+  background-image: linear-gradient(315deg, #ffd9de 0%, #e99ba6 74%);
+}
+
+.register-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.error {
+  display: inline-block;
+  background-color: #ca3a11;
+  color: #fff;
+  padding: 3px 5px;
+  margin-bottom: 5px;
+  border-radius: 4px;
+}
